# map_tracker

./: .gitignore  CMakeLists.txt  README.md
FindMarkers/: CMakeLists.txt  detect_markers.cpp
LinesTracker/: CMakeLists.txt  LineDescriptors.cpp  LinesHomography.cpp  LinesMatcher_bis.cpp  LinesMatching.cpp  ObjectTracking.cpp
data/: Config.xml
data/calibration/: eye_tracker.xml  lenovo.xml  logitech.xml
src/: Generic.cpp  Generic.hpp  Landmark.cpp  Landmark.hpp  Map_Tracker.cpp  Map_Tracker.hpp
tests/: CMakeLists.txt  CMakeLists.txt~  tracker.cpp
tests/common/: VideoSource.cpp  VideoSource.hpp
tools/: CMakeLists.txt  calibrate.cpp  landmark.cpp
