cmake_minimum_required(VERSION 2.8)
project( LinesFeatures )
find_package( OpenCV REQUIRED )
add_executable( LinesFeatures LineDescriptors.cpp )
add_executable( LinesMatching LinesMatching.cpp )
add_executable( LinesMatcher_bis LinesMatcher_bis.cpp )
add_executable( TemplateMatching TemplateMatching.cpp )
add_executable( ObjectTracking ObjectTracking.cpp )
target_link_libraries( LinesFeatures ${OpenCV_LIBS} )
target_link_libraries( LinesMatching ${OpenCV_LIBS} )
target_link_libraries( LinesMatcher_bis ${OpenCV_LIBS} )
target_link_libraries( TemplateMatching ${OpenCV_LIBS} )
target_link_libraries( ObjectTracking ${OpenCV_LIBS} )
